--- a/src/app/admin/table-description/table-description.component.html
+++ b/src/app/admin/table-description/table-description.component.html
@@ -1,157 +1,209 @@
-<form [formGroup]="mainFormGroup" (ngSubmit)="onSubmit()">
+<form  (ngSubmit)="onSubmit()">
 
-<mat-horizontal-stepper #stepper>
+    <mat-horizontal-stepper #stepper>
 
-    <mat-step>
-      <form [formGroup]="firstFormGroup"   *ngIf="stepper.selectedIndex === 0">
-            <ng-template matStepLabel>Project description</ng-template>
+        <mat-step>
+            <form *ngIf="stepper.selectedIndex === 0">
+                <ng-template matStepLabel>Project description</ng-template>
 
-      <div>
-        <mat-form-field appearance="fill">
-          <mat-label>Username</mat-label>
-          <input matInput placeholder="Insert your username"  [(ngModel)]="
-          projectDto.projectDescription.userName
-        " [formControl]="mainFormGroup.get('firstFormGroup.userName')" />
-        </mat-form-field>
-      </div>
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Project Name</mat-label>
-                    <input matInput placeholder="insert your Project Name" [(ngModel)]="
-                    projectDto.projectDescription.projectName
-                  "  formControlName="mainFormGroup.get('firstFormGroup.projectName')" />
-                </mat-form-field>
-            </div>
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Project Code</mat-label>
-                    <input matInput placeholder="insert your Project Code" [(ngModel)]="
-                    projectDto.projectDescription.projectCode
-                  " formControlName="mainFormGroup.get('firstFormGroup.projectCode')"  />
-                </mat-form-field>
-            </div>
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Project Cost</mat-label>
-                    <input type="number" matInput placeholder="insert your Project Cost" [(ngModel)]="
-                    projectDto.projectDescription.projectCost
-                  " formControlName="projectCost"  />
-                </mat-form-field>
-            </div>
-
-
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Execution agency</mat-label>
-                    <input matInput placeholder="insert your Execution agency" [(ngModel)]="
-                    projectDto.projectDescription.executingAgency
-                  "  formControlName="executingAgency"  />
-                </mat-form-field>
-            </div>
-
-
-            <div>
-                <button mat-button matStepperNext mat-raised-button color="primary"
-                    style="font-size: 12px !important; padding: 4px 8px !important;">
-                    Next
-                </button>
-            </div>
-
-        </form>
-    </mat-step>
-
-    <mat-step label="Project Site and Duration">
-        <form [formGroup]="secondFormGroup"  *ngIf="stepper.selectedIndex === 1">
-
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Total duration of accounting</mat-label>
-                    <input matInput placeholder="insert your Total duration of accounting" [(ngModel)]="
-                    projectDto.projectDescription.totalDurationOfAccounting
-                  "   formControlName="totalDurationOfAccounting"   />
-                </mat-form-field>
-            </div>
-  <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Project duration</mat-label>
-                    <input matInput placeholder="Please Insert Your Implementation Phase"   [(ngModel)]="
-                    projectDto.projectDescription.implementationPhase
-                  "   formControlName="implementationPhase"   />
-                </mat-form-field>
-            </div>
-
-            <div>
-                <mat-form-field appearance="fill">
-                    <mat-label>Capitalization Phase</mat-label>
-                    <input matInput placeholder="Please Insert Your Capitalization Phase" [(ngModel)]="
-                    projectDto.projectDescription.capitalizationPhase
-                  "  formControlName="capitalizationPhase"    />
-                </mat-form-field>
-            </div>
-
-          
-
-
-          
-        </form>
-    </mat-step>
- 
-    <mat-step label="Global Warming Potential">
-        <form #form="ngForm">
-            <div class="form-container">
                 <div>
-            
-                    <label for="" style="color: black;">TC/ha default Tier2</label>
-                    <input type="text" class="form-control" >
-                </div>
-                <div style="margin-top: 10px;"> 
                     <mat-form-field appearance="fill">
-                        <mat-label>Source</mat-label>
-                       
-                        <mat-select  [(ngModel)]="selectedSource" name="selectedSource" required
-                            (selectionChange)="updateResults()" matNativeControl
-                            placeholder="Please Select Your Source">
-                            <mat-option>100yr SAR</mat-option>
-                            <mat-option>100yr AR4</mat-option>
-                            <mat-option>100yr AR5 with CC feedback</mat-option>
+                        <mat-label>Username</mat-label>
+                        <input matInput type="text" placeholder="Insert your username" name="userName"
+                            [(ngModel)]="projectDto.projectDescription.userName" />
+                    </mat-form-field>
+                </div>
+                
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Project Name</mat-label>
+                        <input matInput type="text" placeholder="insert your Project Name" name="projectName"
+                            [(ngModel)]="projectDto.projectDescription.projectName" />
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Project Code</mat-label>
+                        <input matInput type="number" placeholder="insert your Project Code" name="projectCode"
+                            [(ngModel)]="projectDto.projectDescription.projectCode" />
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Project Cost</mat-label>
+                        <input type="number" matInput placeholder="insert your Project Cost" name="projectCost"
+                            [(ngModel)]="projectDto.projectDescription.projectCost" />
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Date extract RNE</mat-label>
+                        <input matInput type="date" [(ngModel)]="projectDto.projectDescription.date" name="date" />
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Execution agency</mat-label>
+                        <input matInput type="text" placeholder="insert your Execution agency" name="executingAgency"
+                            [(ngModel)]="projectDto.projectDescription.executingAgency" />
+                    </mat-form-field>
+                </div>
+
+                <div>    
+                    <mat-form-field appearance="fill">
+                        <mat-label>Project Status</mat-label>
+                        <mat-select matNativeControl name="selectedStatus" [(ngModel)]="selectedStatus" placeholder="Please Select Your Project Status">
+                            <mat-option value="In_progress"> Design </mat-option>
+                            <mat-option value="On_hold"> Implementation </mat-option>
+                            <mat-option value="Completed"> Completed </mat-option>
+                            <mat-option value="Cancelled"> Cancelled </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
 
 
+                <div>
+                    <button mat-button matStepperNext mat-raised-button color="primary"
+                        style="font-size: 12px !important; padding: 4px 8px !important;">
+                        Next
+                    </button>
+                </div>
 
-                <div class="result-table">
-                    <div>
-                        <span>CO<sub>2</sub>:</span>
-                        <span>{{ co2Result }}</span>
+            </form>
+        </mat-step>
+
+        <mat-step label="Project Site and Duration">
+            <form *ngIf="stepper.selectedIndex === 1">
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Continent</mat-label>
+                        <mat-select matNativeControl placeholder="Please Select Your Project Status"
+                            [(value)]="selectedContinent" (selectionChange)="onContinentChange()">
+                            <mat-option *ngFor="let continent of continents" [value]="continent.name">{{ continent.name
+                                }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+    
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Country</mat-label>
+                        <mat-select matNativeControl placeholder="Please Select Your Country" [(value)]="selectedCountry">
+                            <mat-option *ngFor="let country of countries" [value]="country">{{ country }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Moisture</mat-label>
+                        <mat-select matNativeControl [(ngModel)]="selectedMoisture" placeholder="Please Select Your Project Status">
+                            <mat-option value="Wet"> Wet </mat-option>
+                            <mat-option value="Moderate"> Moderate </mat-option>
+                            <mat-option value="Dry"> Dry </mat-option>
+                         
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Soil type</mat-label>
+                        <mat-select matNativeControl name="selectedSoil" [(ngModel)]="selectedSoil" placeholder="Please Select Your Soil type">
+                            <mat-option value="Loam">Saline Soil</mat-option>
+                            <mat-option value="Sandy">Desert Soil</mat-option>
+                            <mat-option value="Clay">Mountain (Forest) Soil</mat-option>
+                     
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Total duration of accounting</mat-label>
+                        <input matInput placeholder="insert your Total duration of accounting"
+                            name="totalDurationOfAccounting"
+                            [(ngModel)]="projectDto.projectDescription.totalDurationOfAccounting" />
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Project duration</mat-label>
+                        <input matInput placeholder="Please Insert Your Implementation Phase" name="implementationPhase"
+                            [(ngModel)]="projectDto.projectDescription.implementationPhase" />
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Capitalization Phase</mat-label>
+                        <input matInput placeholder="Please Insert Your Capitalization Phase" name="capitalizationPhase"
+                            [(ngModel)]="projectDto.projectDescription.capitalizationPhase" />
+                    </mat-form-field>
+                </div>
+                <div>
+                    <button mat-button matStepperNext mat-raised-button color="primary"
+                        style="font-size: 12px !important; padding: 4px 8px !important;">
+                        Next
+                    </button>
+                </div>
+
+
+
+
+
+            </form>
+        </mat-step>
+
+        <mat-step label="Global Warming Potential">
+            <form *ngIf="stepper.selectedIndex === 2">
+                <div class="form-container">
+                   
+                    <div style="margin-top: 10px;">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Source</mat-label>
+
+                            <mat-select [(ngModel)]="selectedSource" name="selectedSource" required
+                                (selectionChange)="updateResults()" matNativeControl
+                                placeholder="Please Select Your Source">
+                                <mat-option value="_100_YR_SAR">100yr SAR</mat-option>
+                                <mat-option value="_100_YR_AR4">100yr AR4</mat-option>
+                                <mat-option value="_100_YR_AR5_WITH_CC_FEEDBACK">100yr AR5 with CC feedback</mat-option>
+                            </mat-select>
+                        </mat-form-field>
                     </div>
-                    <div>
-                        <span>CH<sub>4</sub>:</span>
-                        <span>{{ ch4Result }}</span>
-                    </div>
-                    <div>
-                        <span>N<sub>2</sub>O:</span>
-                        <span>{{ n2oResult }}</span>
+
+
+
+                    <div class="result-table">
+                        <div>
+                            <span>CO<sub>2</sub>:</span>
+                            <span>{{ co2Result }}</span>
+                        </div>
+                        <div>
+                            <span>CH<sub>4</sub>:</span>
+                            <span>{{ ch4Result }}</span>
+                        </div>
+                        <div>
+                            <span>N<sub>2</sub>O:</span>
+                            <span>{{ n2oResult }}</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
         </mat-step>
 
 
-</mat-horizontal-stepper>
-<div >
-    <button style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;   color: aliceblue;" mat-button matStepperPrevious mat-raised-button color="warn" class="custom-button">
-        Back
-    </button>
-    <button mat-button matStepperNext mat-raised-button
-            type="submit"
-        style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px; background-color: darkgreen; color: aliceblue;">Save</button>
+    </mat-horizontal-stepper>
+    <div>
+        <button style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;   color: aliceblue;"
+            mat-button matStepperPrevious mat-raised-button color="warn" class="custom-button">
+            Back
+        </button>
+        <button mat-button  mat-raised-button type="submit"
+            style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px; background-color: darkgreen; color: aliceblue;">Save</button>
 
-</div>
+    </div>
 </form>
