--- a/src/app/project/grassland/grassland.component.html
+++ b/src/app/project/grassland/grassland.component.html
@@ -29,7 +29,13 @@
 
         <div class="row">
           <div class="col">
-            Grasslands after deforestation
+            <select class="form-control" id="selectOption" [(ngModel)]="grassland.descriptionGrassland" name="selectOption">
+              <option value="Grasslands after deforestation">Grasslands after deforestation</option>
+              <option value="Grasslands converted to forest land">Grasslands converted to forest land</option>
+              <option value="Grasslands after non-forest LUs">Grasslands after non-forest LUs</option>
+              <option value="Grasslands converted to non-forest LUs">Grasslands converted to non-forest LUs</option>
+            
+            </select>
           </div>
           <div class="col">
             <div class="form-group">
@@ -49,8 +55,7 @@
           <div class="col">
             <div class="form-group">
 
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
+              <select class="form-control" [(ngModel)]="grassland.withGrasslandManagement" name="withGrasslandManagement" id="withGrasslandManagement">
                 <option value="Non-degraded">Non-degraded</option>
                 <option value="High intensity grazing">High intensity grazing</option>
                 <option value="Severely degraded">Severely degraded</option>
@@ -64,61 +69,7 @@
           <div class="col">
             <div class="form-group">
 
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-
-        </div>
-        <hr>
-
-        <div class="row">
-          <div class="col">
-            Grasslands converted to forest land
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
+              <select class="form-control"  [(ngModel)]="grassland.withoutFireManagement" name="withoutFireManagement">
                 <option value="Non-degraded">Non-degraded</option>
                 <option value="High intensity grazing">High intensity grazing</option>
                 <option value="Severely degraded">Severely degraded</option>
@@ -131,110 +82,7 @@
           </div>
 
         </div>
-        <hr>
-
-        <div class="row">
-          <div class="col">
-            Grasslands after non-forest LUs
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-
-        </div>
-        <div class="row">
-          <div class="col">
-            Grasslands converted to non-forest LUs
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-          <div class="col">
-            <div class="form-group">
-
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Non-degraded">Non-degraded</option>
-                <option value="High intensity grazing">High intensity grazing</option>
-                <option value="Severely degraded">Severely degraded</option>
-                <option value="Improved grassland">Improved grassland</option>
-                <option value="Improved with medium inputs">Improved with medium inputs</option>
-                <option value="Improved with high inputs">Improved with high inputs</option>
-              </select>
-            </div>
-
-          </div>
-
-        </div>
+     
 
 
       </div>
@@ -250,9 +98,6 @@
 
     <div class="card">
       <div class="card-header bg-dark text-white">
-
-
-
         <strong>Fire managment & periodicty</strong>
       </div>
       <div class="card-body">
@@ -273,26 +118,22 @@
           <div class="col">
             <div class="form-group">
 
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Please select </option>
-                <option value="Yes">Yes</option>
-                <option value="No">No</option>
+              <select class="form-control" id="withFireManagement" [(ngModel)]="grassland.withFireManagement" name="withFireManagement">
+                <option [ngValue]="true">Yes</option>
+                <option [ngValue]="false">No</option>
               </select>
-              <select class="form-control" id="selectOption">
-                <option value="" disabled selected>Years </option>
+              <select class="form-control" [(ngModel)]="grassland.year" name="year" id="year">
                 <option value="5">5</option>
                 <option value="5">5</option>
               </select>
             </div>
           </div>
           <div class="col">
-            <select class="form-control" id="selectOption">
-              <option value="" disabled selected>Please select </option>
-              <option value="Yes">Yes</option>
-              <option value="No">No</option>
+            <select class="form-control" id="withoutFireManagement" [(ngModel)]="grassland.withoutFireManagement" name="withoutFireManagement">
+              <option [ngValue]="true">Yes</option>
+              <option [ngValue]="false">No</option>
             </select>
-            <select class="form-control" id="selectOption">
-              <option value="" disabled selected>Years </option>
+            <select class="form-control" id="year2" [(ngModel)]="grassland.year2" name="year2">
               <option value="5">5</option>
               <option value="5">5</option>
             </select>
@@ -307,7 +148,7 @@
     </div>
     <div style="margin-top: 10px;">
       <button mat-button matStepperPrevious mat-raised-button color="warn"
-      style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;">Back</button>
+        style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;">Back</button>
       <button mat-button matStepperNext mat-raised-button color="primary"
         style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px;">Next</button>
     </div>
@@ -334,39 +175,16 @@
         <hr>
         <div class="row">
           <div class="col">
-            <input class="form-control" name="start1" [(ngModel)]="start1" placeholder="value" type="number">
+            <input class="form-control" name="start1" [(ngModel)]="grassland.startAreaGrassland" placeholder="value" type="number">
           </div>
           <div class="col">
-            <input class="form-control" name="without1" [(ngModel)]="without1" placeholder="value" type="number">
+            <input class="form-control" name="without1" [(ngModel)]="grassland.withoutAreaGrassland" placeholder="value" type="number">
           </div>
           <div class="col">
-            <input class="form-control" name="with1" [(ngModel)]="with1" placeholder="value" type="number">
+            <input class="form-control" name="with1" [(ngModel)]="grassland.withAreaGrassland" placeholder="value" type="number">
           </div>
         </div>
-        <hr>
-        <div class="row">
-          <div class="col">
-            <input class="form-control" name="start2" [(ngModel)]="start2" placeholder="value" type="number">
-          </div>
-          <div class="col">
-            <input class="form-control" name="without2" [(ngModel)]="without2" placeholder="value" type="number">
-          </div>
-          <div class="col">
-            <input class="form-control" name="with2" [(ngModel)]="with2" placeholder="value" type="number">
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col">
-            <input class="form-control" name="start3" [(ngModel)]="start3" placeholder="value" type="number">
-          </div>
-          <div class="col">
-            <input class="form-control" name="without3" [(ngModel)]="without3" placeholder="value" type="number">
-          </div>
-          <div class="col">
-            <input class="form-control" name="with3" [(ngModel)]="with3" placeholder="value" type="number">
-          </div>
-        </div>
+      
       </div>
     </div>
 
@@ -403,40 +221,25 @@
       </thead>
       <tbody>
         <tr>
-          <td>{{start1}}</td>
-          <td>{{start1-without1}}</td>
-          <td>{{start1-with1}}</td>
-          <td>{{withoutResult1}}</td>
-          <td>{{withResult1}}</td>
-          <td style="color: forestgreen;">-{{withoutResult1 - withResult1}}</td>
+          <td>{{grassland.startAreaGrassland}}</td>
+          <td>{{grassland.startAreaGrassland-grassland.withoutAreaGrassland}}</td>
+          <td>{{grassland.startAreaGrassland-grassland.withAreaGrassland}}</td>
+          <td>{{(grassland.startAreaGrassland-grassland.withoutAreaGrassland) * this.generateRandomDecimal(36,150,2)}}</td>
+          <td>{{(grassland.startAreaGrassland-grassland.withAreaGrassland) * this.generateRandomDecimal(36,150,2)}}</td>
+          <td style="color: forestgreen;">-{{(grassland.startAreaGrassland-grassland.withoutAreaGrassland) * this.generateRandomDecimal(36,150,2) - (grassland.startAreaGrassland-grassland.withAreaGrassland) * this.generateRandomDecimal(36,150,2)}}</td>
         </tr>
-        <tr>
-          <td>{{start2}}</td>
-          <td>{{start2-without2}}</td>
-          <td>{{start2-with2}}</td>
-          <td>{{withoutResult2}}</td>
-          <td>{{withResult2}}</td>
-          <td style="color: forestgreen;">-{{withoutResult2 - withResult2}}</td>
-        </tr>
-        <tr>
-          <td>{{start3}}</td>
-          <td>{{start3 - without3}}</td>
-          <td>{{start3 - with3}}</td>
-          <td>{{withoutResult3}}</td>
-          <td>{{withResult3}}</td>
-          <td style="color: forestgreen;">-{{withoutResult3 - withResult3}}</td>
-        </tr>
+     
 
       </tbody>
     </table>
     <div style="margin-top: 10px;">
       <button mat-button matStepperPrevious mat-raised-button color="warn"
         style="font-size: 12px !important; padding: 4px 8px !important; width: 100px;">Back</button>
-      <button mat-button matStepperNext mat-raised-button color="primary"
+      <button mat-button matStepperNext mat-raised-button color="primary" (click)="save()"
         style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px;">Confirme</button>
     </div>
-  </mat-step >
-    <mat-step label="pie">
+  </mat-step>
+  <mat-step label="pie">
     <app-chart></app-chart>
   </mat-step>
   <!-- <mat-step>
