--- a/src/app/forest-management/forest-management.component.html
+++ b/src/app/forest-management/forest-management.component.html
@@ -242,8 +242,10 @@
                 style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; margin-left: 10px;">Confirme</button>
         </div>
     </mat-step>
-    <mat-step>
-        <app-chart></app-chart>
+    <mat-step label="pie">
+        <div style="width: 300px; height: 300px;">
+            <canvas id="myChartTwooo"></canvas>
+        </div>
     </mat-step>
 
 </mat-horizontal-stepper>
