--- a/src/app/admin/land-use-changes/land-use-changes.component.html
+++ b/src/app/admin/land-use-changes/land-use-changes.component.html
@@ -138,7 +138,7 @@
                             <div style="margin-top: 10px;" class="col-md-12">
 
                                 <button mat-button matStepperNext mat-raised-button color="primary"
-                                    [disabled]="!climate || !selectedVegetation" (click)="calcul()"
+                                     (click)="calcul()"
                                     style="font-size: 12px !important; padding: 4px 8px !important; width: 100px; ">Next</button>
                             </div>
                         </form>
