--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/logoApp.png"/>
-        </div>
-        Ex Act Tool
-    </a>
+ 
+     
+            <img style="width: 50px;" src="/assets/img/logoApp.png"/>
+     
+       <span style="color: green;">Green</span>  Tech
+
 </div>
 <div class="sidebar-wrapper">
   <div *ngIf="isMobileMenu()">
