--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row row-panel">
     <div class="col-6 text-center">
       <div class="row pt-3 text-start"></div>
@@ -34,6 +34,52 @@
           </form>
         </div>
       </div>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+<div class="wrapper-cover">
+  <div class="wrapper">
+   
+    <!----------------------------- Form box ----------------------------------->
+    <div class="form-box">
+
+      <!------------------- login form -------------------------->
+      <div class="login-container" id="login">
+        <div class="top">
+          <span>Don't have an account? <a>Sign Up</a></span>
+        </div>
+        <form (ngSubmit)="login()" [formGroup]="loginForm">
+
+          <div class="top2">
+            <span>Login</span>
+          </div>
+          <div class="input-box">
+            <input type="text" class="input-field" formControlName="email" placeholder="Username or Email">
+            <i class="bx bx-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" class="input-field" formControlName="password" placeholder="Password">
+            <i class="bx bx-lock-alt"></i>
+          </div>
+          <div class="input-box">
+            <input type="submit" class="submit" value="Sign In">
+          </div>
+        </form>
+        <div class="two-col">
+          <div class="one">
+            <input type="checkbox" id="login-check">
+            <label for="login-check"> Remember Me</label>
+          </div>
+          <div class="two">
+            <label><a>Forgot password?</a></label>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
